# MolSim

./: .README.md.swp  CMakeLists.txt  Doxyfile  LinkedCellContainer_omp.cpp  LinkedCellContainer_omp2.cpp  LinkedCellContainer_omp5.cpp  LinkedCellContainer_omp6.cpp  LinkedCellContainer_omp6.h  LinkedCellContainer_omp6v2.cpp  LinkedCellContainer_ompfin.cpp  ParticleContainer_omp.cpp  README.md  benchtest.py  spd
.github/workflows/: Continuous_Integration.yml
MolSim_assignmet4_ipcx_run_explain/: CMakeLists_assignment4.txt  README.md
bench/: .time_measure.txt.swp  Report_Assignment3.docx  time_measure.txt
bench/a4_o3/: analysis.txt  analysis2.txt
bench/assignment4_fluid_release/: analysis.txt  analysis2.txt
bench/assignment4_release/: analysis.txt
cmake/modules/: fmt.cmake  gtest.cmake  spdlog.cmake  xcerces.cmake  xsd.cmake
input/: assignment1.xml  assignment2.txt  assignment2.xml  assignment3.xml  assignment3_1000_ds.xml  assignment3_1000_lc.xml  assignment3_1275.xml  assignment3_2000_ds.xml  assignment3_2000_lc.xml  assignment3_2400.xml  assignment3_4000_ds.xml  assignment3_4000_lc.xml  assignment3_4704.xml  assignment3_8000_ds.xml  assignment3_8000_lc.xml  assignment3_falling_drop.xml  assignment4.xml  assignment4_9600.xml  assignment4_falling_drop.xml  assignment4_fluid.xml  assignment5.xml  assignment5_bench_0.xml  assignment5_bench_14_0.xml  assignment5_bench_14_1.xml  assignment5_bench_1_0.xml  assignment5_bench_1_1.xml  assignment5_bench_2_1.xml  assignment5_bench_4_1.xml  assignment5_flow.xml  assignment5_membrane.xml  falling_drop.xml  flow05.xml  flow1.xml  flow10.xml  flow15.xml  justfortest.xml  simpletest.txt  test.txt
input/benchmarking/: assignment5_bench_112_0.xml  assignment5_bench_16_0.xml  assignment5_bench_16_1.xml  assignment5_bench_28_0.xml  assignment5_bench_28_1.xml  assignment5_bench_4_0.xml  assignment5_bench_56_0.xml  assignment5_bench_56_1.xml  assignment5_bench_8_0.xml  assignment5_bench_8_1.xml
input/contest/: input2D.xml
input/nanoflow/: flow02.5.xml  flow05.xml  flow07.5.xml  flow10.xml  flow12.5.xml  flow15.xml  flow17.5.xml  flow20.xml  flow22.5.xml  flow25.xml  flowT10.xml  flowT20.xml  flowT30.xml  flowT50.xml  flowT60.xml  flowT70.xml  flowT80.xml
src/: Cuboid.cpp  Cuboid.h  FileReader.cpp  Force.h  GravitationalForce.cpp  GravitationalForce.h  LennardJonesForce.cpp  LennardJonesForce.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  Simulation.cpp  Simulation.h
src/body/: Cluster.cpp  Cluster.h  Cuboid.cpp  Cuboid.h  Membrane.cpp  Membrane.h  Particle.cpp  Particle.h  Sphere.cpp  Sphere.h  StationaryParticle.cpp  StationaryParticle.h
src/container/: BoundaryCondition.h  Cell.cpp  Cell.h  Container.cpp  (+7 more)
tests/: Assignment1Test.cpp  Assignment1_test.cpp  Assignment2_test.cpp  BasicTest.cpp  Basicfunctiontest.cpp  CellTest.cpp  CuboidTest.cpp  DirectSumContainerTest.cpp  IteratorTest.cpp  LennardJonesForceTest.cpp  LinkedCellContainerTest.cpp  Logger.cpp  Logger.h  Resulttest.cpp  SimpleTest.cpp  SphereTest.cpp  TestEnvironment.cpp  XMLReaderTest.cpp  test1.cpp
(+68 files in other folders)
